# androidplayer

./: README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AAudioRender.cpp  ANWRender.cpp  CMakeLists.txt  OpenGLRenderer.cpp  PacketQueue.cpp  ffmpegDecoder.cpp  nativePlayer.cpp
app/src/main/cpp/include/: AAudioRender.h  OpenGLRenderer.h  PacketQueue.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/com/example/androidplayer/: MainActivity.java  MediaInfo.java  Player.java
app/src/main/jniLibs/arm64-v8a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
